# multi-agent-hr-assistant

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/multi-agent-hr-assistant/: .gitignore  HR Policy.docx  config.py  docker-compose.yml  main.py  main1.py
src/multi-agent-hr-assistant/application/: states.py  workflow.py
src/multi-agent-hr-assistant/application/agents/: clerk.py  librarian.py  supervisor.py
src/multi-agent-hr-assistant/application/services/: ingestion.py
src/multi-agent-hr-assistant/data/policies/: chroma.sqlite3
src/multi-agent-hr-assistant/domain/: entities.py  intents.py  ports.py
src/multi-agent-hr-assistant/domain/prompts/: clerk_prompt.py  librarian_prompt.py  supervisor_prompt.py
src/multi-agent-hr-assistant/domain/tools/: clerk_tool.py  librarian_tool.py  supervisor_tool.py
src/multi-agent-hr-assistant/infrastructure/adapters/: Supervisor_librarian_graph_executor.py  chroma_store.py  clerk_leave_balance_adapter.py  clerk_ticket_creation_adapter.py  librarian_insertion_adapter.py  librarian_retrieval_adapter.py  librarian_updation_adapter.py  redis_store.py  supervisor_clerk_graph_executor.py
src/multi-agent-hr-assistant/infrastructure/llm_providers/: groq_provider.py  ollama_provider.py
src/multi-agent-hr-assistant/infrastructure/redis/: redis_client.py  redis_config.py
src/multi-agent-hr-assistant/infrastructure/socket/: redis_to_socket_bridge.py  socket_manager.py
src/multi-agent-hr-assistant/infrastructure/supabase/: supabase_client.py
src/multi-agent-hr-assistant/infrastructure/vector_store/: chroma_client.py
src/multi-agent-hr-assistant/ui/: package-lock.json  package.json
src/multi-agent-hr-assistant/ui/src/: middleware.ts
src/multi-agent-hr-assistant/ui/src/app/: globals.css  layout.tsx
src/multi-agent-hr-assistant/ui/src/app/auth/: layout.tsx
src/multi-agent-hr-assistant/ui/src/app/auth/callback/: route.ts
src/multi-agent-hr-assistant/ui/src/app/auth/login/: page.tsx
src/multi-agent-hr-assistant/ui/src/app/auth/signup/: page.tsx
src/multi-agent-hr-assistant/ui/src/app/dashboard/: layout.tsx  page.tsx
src/multi-agent-hr-assistant/ui/src/app/dashboard/chat/[chatId]/: page.tsx
src/multi-agent-hr-assistant/ui/src/components/: chat-area.tsx  header.tsx  hitl-request-modal.tsx  profile-modal.tsx  sidebar.tsx  socket-provider.tsx
src/multi-agent-hr-assistant/ui/src/components/ui/: button.tsx  dialog.tsx  input.tsx
src/multi-agent-hr-assistant/ui/src/lib/: actions.ts  utils.ts
src/multi-agent-hr-assistant/ui/src/types/: hitl.ts
src/multi-agent-hr-assistant/ui/supabase/: setup.sql
tests/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  TEST_SUMMARY.md  __init__.py  conftest.py  pytest.ini  requirements-test.txt  run_tests.py  test_adapters.py  test_agents.py  test_api_endpoints.py  test_entities.py  test_integration.py  test_intents.py  test_utilities.py
