[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-hr-assistant"
version = "0.1.0"
description = "A multi-agent AI system for HR assistance using LangChain and LLMs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["ai", "hr", "langchain", "multi-agent", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "starlette>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # LLM & Agent Framework
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-groq>=0.0.1",
    "langgraph>=0.0.1",
    
    # Real-time Communication
    "python-socketio>=5.9.0",
    "aiofiles>=23.2.0",
    
    # Database & Vector Store
    "supabase>=2.0.0",
    "chromadb>=0.4.0",
    "redis>=5.0.0",
    
    # Environment & Configuration
    "python-dotenv>=1.0.0",
    
    # Utilities
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.9.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.0.0",
    "pytest-testdox>=3.0.0",
    "pytest-watch>=4.2.0",
    "pytest-html>=3.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "pylint>=2.17.0",
    "mypy>=1.0.0",
    "types-redis>=4.6.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.9.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.0.0",
    "responses>=0.22.0",
    "faker>=15.0.0",
    "httpx>=0.23.0",
    "pyyaml>=6.0",
]

all = [
    "multi-agent-hr-assistant[dev,test]",
]

[project.urls]
Homepage = "https://github.com/yourusername/multi-agent-hr-assistant"
Documentation = "https://github.com/yourusername/multi-agent-hr-assistant#readme"
Repository = "https://github.com/yourusername/multi-agent-hr-assistant.git"
Issues = "https://github.com/yourusername/multi-agent-hr-assistant/issues"

[tool.setuptools]
packages = ["multi_agent_hr_assistant"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py39"
extend-select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
extend-ignore = [
    "E501",   # line too long (handled by black)
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--strict-markers -v"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow tests",
    "asyncio: async tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/multi_agent_hr_assistant"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/virtualenv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
